--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@rainbow-me/rainbowkit": "^2.1.2",
     "@tanstack/react-query": "^5.36.0",
     "ethers": "^6.16.0",
-    "next": "15.3.4",
+    "next": "^16.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "viem": "^2.16.0",
